fixed contrast error

--- a/final-project/css/small.css
+++ b/final-project/css/small.css
@@ -150,7 +150,7 @@ footer {
     padding: 40px;
 }
 footer p {
-    color: #354F52;
+    color: black;
 }
 
 /* Feedback */
